--- a/マップチップのゲーム.vcxproj.filters
+++ b/マップチップのゲーム.vcxproj.filters
@@ -115,5 +115,6 @@
       <Filter>KamataEngine\Include</Filter>
     </ClInclude>
     <ClInclude Include="MapLoad.h" />
+    <ClInclude Include="Struct.h" />
   </ItemGroup>
 </Project>
